--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,6 +42,18 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
@@ -53,9 +65,34 @@
       defer
     ></script>
     <script src="https://cdn-ca.pagesense.io/js/zoho3419/8a93ff5516d1450b837c6ffdc0daffcb.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E50PFDVXYE");
+    </script>
     <title>Privacy Policy</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PNF89GR5"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+
+    <!-- End Google Tag Manager (noscript) -->
     <section class="flex flex-col items-center py-10 w-full">
       <!-- Logo and Navigation -->
       <div
@@ -157,7 +194,9 @@
           site to make sure that you understand how any personal information you
           provide will be used.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
+        <h2
+          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
+        >
           Collection of Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -169,7 +208,9 @@
           email from Wicked Wipes contains instructions on how to opt out of
           receiving further marketing emails from the Company.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
+        <h2
+          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
+        >
           Cookie/Tracking Technology
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -182,7 +223,9 @@
           technology, however, if you previously provided personally
           identifiable information, cookies may be tied to such information.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
+        <h2
+          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
+        >
           Distribution of Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -193,7 +236,9 @@
           (3) investigating fraud which has already taken place. The information
           is not provided to these companies for marketing purposes.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
+        <h2
+          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
+        >
           Commitment to Data Security
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -201,7 +246,9 @@
           authorized employees, have access to this information. All emails and
           newsletters from this site allow you to opt out of further mailings.
         </p>
-        <h2 class="text-left text-2xl md:text-4xl urbanist-regular font-semibold">
+        <h2
+          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
+        >
           Privacy Contact Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
