Updated paragraph on Homepage

--- a/index.html
+++ b/index.html
@@ -333,8 +333,11 @@
       </div>
       <div class="flex w-full md:px-28 px-4 justify-center">
         <p class="md:text-2xl text-xl league-spartan text-center">
-          Elevate your customer experience at your dining establishment
-          Hand hygiene is the primary means of reducing the spread of viruses and bacteria. Your customers will appreciate your commitment to their health and safety!
+          Elevate your guest's experience at your dining establishment. Begin with taking care of the
+          important things that make a huge impression on customers, which in turn will build trust and
+          loyalty. All-important germ reduction, starting with hygiene, remains the primary means of
+          reducing the spread of viruses and bacteria. Your customers will appreciate your commitment
+          to their health and safety which will ultimately build your brand value.
         </p>
       </div>
     </div>
