--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
       </div>
       <div class="flex flex-col w-full">
         <p class="league-spartan text-xl">
-          The compressed, high-quality cloth hand wipe inside an attractive and compact pod, cleans and refreshes your
-          hands...
+          The compressed, high-quality cloth hand wipe inside an attractive and compact pod, cleans and
+          refreshes your hands. A unique no-leak design of the sealed, individual pods ensures the single-
+          use wipes are hygienic and safe.
         </p>
         <p class="league-spartan text-xl">
           So easy and fun to use. Just press firmly in the centre of the pod with your thumb. Feel the seal break and watch as the cloth absorbs the pleasantly scented, natural soap contained within, and unfurls almost magically for use!
