--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
           <img src="./public/water-drop.png" alt="">
           <div>
             <h2 class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]">Natural</h2>
-            <p class="league-spartan text-[16px]">Dermatologically tested, hypoallergenic liquid soap gently cleanses your hands. Wicked Wipes are alcohol-free, chemical-free and colour-additive-free.</p>
+            <p class="league-spartan text-[16px]">Wicked Wipes are alcohol-free, chemical-free and colour-additive-free. The dermatologically
+              tested, hypoallergenic liquid soap gently cleanses your hands.</p>
           </div>
         </div>
         <div id="document-sliding-cards50"
