--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -54,6 +54,7 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
