--- a/who-we-are.html
+++ b/who-we-are.html
@@ -37,6 +37,7 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="./global.css" />
