Added Blogs Page to the Website

--- a/features.html
+++ b/features.html
@@ -38,7 +38,10 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -218,6 +221,9 @@
               <li><a href="features.html">Features</a></li>
               <li><a href="private-label.html">Private Label</a></li>
               <li><a href="who-we-are.html">Who We are</a></li>
+              <li>
+                <a href="blogs.html">Blogs</a>
+              </li>
               <li><a href="#target-section">Contact</a></li>
             </ul>
           </nav>
@@ -262,6 +268,9 @@
               </li>
               <li>
                 <a href="who-we-are.html">Who We are</a>
+              </li>
+              <li>
+                <a href="blogs.html">Blogs</a>
               </li>
               <li>
                 <a href="#target-section">Contact</a>
