--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
               <a href="who-we-are.html">Who We are</a>
             </li>
             <li>
+              <a href="blogs.html">Blogs</a>
+            </li>
+            <li>
+              <a href="who-we-are.html">Who We are</a>
+            </li>
+            <li>
               <a href="#target-section">Contact</a>
             </li>
           </ul>
@@ -151,6 +157,9 @@
             </li>
             <li>
               <a href="who-we-are.html">Who We are</a>
+            </li>
+            <li>
+              <a href="blogs.html">Blogs</a>
             </li>
             <li>
               <a href="#target-section">Contact</a>
