--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -54,7 +54,10 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
@@ -110,6 +113,9 @@
             <li><a href="features.html">Features</a></li>
             <li><a href="private-label.html">Private Label</a></li>
             <li><a href="testimonials.html">Who We are</a></li>
+            <li>
+              <a href="blogs.html">Blogs</a>
+            </li>
             <li><a href="#target-section">Contact</a></li>
           </ul>
         </nav>
@@ -172,7 +178,10 @@
         <ul class="flex flex-col p-4 space-y-6 text-black text-xl font-normal">
           <li><a href="features.html" class="py-4">Features</a></li>
           <li><a href="private-label.html" class="py-4">Private Label</a></li>
-          <li><a href="testimonials.html" class="py-4">Who We are</a></li>
+          <li><a href="who-we-are.html" class="py-4">Who We are</a></li>
+          <li>
+            <a href="blogs.html" class="py-4">Blogs</a>
+          </li>
           <li><a href="#target-section" class="py-4">Contact</a></li>
         </ul>
       </div>
