--- a/who-we-are.html
+++ b/who-we-are.html
@@ -37,7 +37,10 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="./global.css" />
@@ -168,6 +171,9 @@
               <a href="who-we-are.html">Who We are</a>
             </li>
             <li>
+              <a href="blogs.html">Blogs</a>
+            </li>
+            <li>
               <a href="#target-section">Contact</a>
             </li>
           </ul>
@@ -189,6 +195,9 @@
             </li>
             <li>
               <a href="who-we-are.html">Who We are</a>
+            </li>
+            <li>
+              <a href="blogs.html">Blogs</a>
             </li>
             <li>
               <a href="#target-section">Contact</a>
