--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="notranslate" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="geo.region" content="CA-ON" />
+    <meta name="geo.placename" content="Oakville" />
+    <meta name="geo.position" content="43.51347;-79.671385" />
+    <meta name="ICBM" content="43.51347, -79.671385" />
+    <meta
+      property="og:title"
+      content=" Unique design, features of Wicked Wipes"
+    />
+    <meta
+      property="og:description"
+      content=" Wicked Wipes intelligent design, features and how to use"
+    />
+
+    <meta
+      property="og:site_name"
+      content="Beatus Concepts Inc. - Wicked Wipes"
+    />
+    <meta
+      property="og:image"
+      content="/public/meta/wicked-wipes-features.jpg"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
@@ -80,6 +104,7 @@
       gtag("js", new Date());
       gtag("config", "G-E50PFDVXYE");
     </script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
       .form {
         width: 100%;
