Added Slider in Blog  details

--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="googlebot" content="notranslate" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -127,6 +126,7 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
+    <!-- Navbar Section -->
     <section class="flex flex-col items-center py-10 w-full">
       <!-- Logo and Navigation -->
       <div
@@ -214,6 +214,7 @@
         </ul>
       </div>
     </section>
+    <!-- Banner Section -->
     <section class="flex w-full relative">
       <img
         src="./public/blog-banner.png"
@@ -249,6 +250,7 @@
         />
       </div>
     </section>
+    <!-- Blogs Section -->
     <section class="flex w-full pt-64">
       <div class="flex flex-col w-full px-36">
         <div class="flex w-full p-10">
