--- a/blog-details.html
+++ b/blog-details.html
@@ -213,17 +213,17 @@
     </section>
     <section class="flex w-full py-16">
       <div class="flex gap-x-16 px-40">
-        <div class="flex flex-col">
+        <div class="flex flex-col w-fit">
           <h1 class="text-[78px]">Wicked Wipes</h1>
           <div class="flex flex-col">
             <h2 class="py-6 text-[28px]">Wicked Wipes</h2>
-            <p class="text-xl">
+            <p class="text-[20px]">
               gravida fringilla est. gravida diam efficitur. quis urna.
               hendrerit Lorem turpis non. tincidunt nisi tincidunt scelerisque
               porta faucibus volutpat placerat.
             </p>
           </div>
-          <div class="flex pt-5">
+          <div class="flex pt-5 w-full">
             <img src="./public/detail-1.png" class="h-[400px]" alt="" />
           </div>
         </div>
