Made mobile responsive blog pages

--- a/blog-details.html
+++ b/blog-details.html
@@ -208,26 +208,26 @@
         </ul>
       </div>
     </section>
-    <section class="flex w-full">
-      <img src="./public/blog-details.png" class="w-full h-full" alt="" />
+    <section class="flex w-full h-full">
+      <img src="./public/blog-details.png" class="w-full md:h-[462px] h-[235px]" alt="" />
     </section>
     <section class="flex w-full py-16">
-      <div class="flex gap-x-16 px-40">
+      <div class="flex md:flex-row flex-col gap-x-16 md:px-40 px-4">
         <div class="flex flex-col w-fit">
-          <h1 class="text-[78px]">Wicked Wipes</h1>
+          <h1 class="md:text-[78px] text-[40px]">Wicked Wipes</h1>
           <div class="flex flex-col">
-            <h2 class="py-6 text-[28px]">Wicked Wipes</h2>
-            <p class="text-[20px]">
+            <h2 class="py-6 md:text-[28px] text-[18px]">Wicked Wipes</h2>
+            <p class="md:text-[20px] text-[11px]">
               gravida fringilla est. gravida diam efficitur. quis urna.
               hendrerit Lorem turpis non. tincidunt nisi tincidunt scelerisque
               porta faucibus volutpat placerat.
             </p>
           </div>
           <div class="flex pt-5 w-full">
-            <img src="./public/detail-1.png" class="h-[400px]" alt="" />
+            <img src="./public/detail-1.png" class="md:h-[400px] h-[319px]" alt="" />
           </div>
         </div>
-        <div class="flex flex-col gap-y-6 text-xl">
+        <div class="flex flex-col pt-12 md:pt-0 font-semibold gap-y-6 md:text-xl text-[12px]">
           <p>
             gravida fringilla est. gravida diam efficitur. quis urna. hendrerit
             Lorem turpis non. tincidunt nisi tincidunt scelerisque porta
@@ -261,7 +261,7 @@
         </div>
       </div>
     </section>
-    <section class="py-24">
+    <section class="md:py-24 py-10">
       <div class="swiper-contain z-50 overflow-hidden">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
