--- a/blogs.html
+++ b/blogs.html
@@ -218,42 +218,44 @@
     <section class="flex w-full relative">
       <img
         src="./public/blog-banner.png"
-        class="w-full h-[636px]"
+        class="w-full md:h-[636px] h-[300px]"
         alt="banner"
       />
-      <div class="flex flex-col items-center absolute top-[50%] left-[40%]">
-        <h1 class="text-white text-5xl">Blog</h1>
-        <h1 class="text-white text-5xl">Wicked Wipes</h1>
+      <div
+        class="flex flex-col items-center absolute top-[50%] md:left-[40%] left-[35%]"
+      >
+        <h1 class="text-white md:text-5xl text-xl">Blog</h1>
+        <h1 class="text-white md:text-5xl text-xl">Wicked Wipes</h1>
       </div>
     </section>
-    <section class="flex w-full relative px-28">
+    <section class="flex w-full relative md:px-28 px-4">
       <div class="flex justify-center gap-x-2 absolute top-[-50px] inset-x-0">
         <img
           src="./public/blog-1.png"
-          class="w-auto h-full drop-shadow-lg"
+          class="md:w-auto w-[85px] h-full drop-shadow-lg"
           alt=""
         />
         <img
           src="./public/blog-2.png"
-          class="w-auto h-full drop-shadow-lg"
+          class="md:w-auto w-[85px] h-full drop-shadow-lg"
           alt=""
         />
         <img
           src="./public/blog-3.png"
-          class="w-auto h-full drop-shadow-lg"
+          class="md:w-auto w-[85px] h-full drop-shadow-lg"
           alt=""
         />
         <img
           src="./public/blog-4.png"
-          class="w-auto h-full drop-shadow-lg"
+          class="md:w-auto w-[85px] h-full drop-shadow-lg"
           alt=""
         />
       </div>
     </section>
     <!-- Blogs Section -->
-    <section class="flex w-full pt-64">
-      <div class="flex flex-col w-full px-36">
-        <div class="flex w-full p-10">
+    <section class="flex w-full md:pt-64 pt-20">
+      <div class="flex flex-col w-full md:px-36 px-4">
+        <div class="flex md:flex-row flex-col w-full md:gap-y-0 gap-y-4 p-10">
           <div class="flex flex-col justify-center items-center gap-y-4">
             <img src="./public/post-1.png" alt="" />
             <h2 class="text-center">
@@ -288,7 +290,7 @@
             </button>
           </div>
         </div>
-        <div class="flex w-full p-10">
+        <div class="flex md:flex-row flex-col w-full md:gap-y-0 gap-y-4 p-10">
           <div class="flex flex-col justify-center items-center gap-y-4">
             <img src="./public/post-4.png" alt="" />
             <h2 class="text-center">
