Blogs Linked to Blog Details Page

--- a/blogs.html
+++ b/blogs.html
@@ -263,6 +263,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -274,6 +275,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -285,6 +287,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -298,6 +301,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -309,6 +313,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -320,6 +325,7 @@
             </h2>
             <button
               class="bg-[#3A50B3] rounded-full p-3 text-white text-[18px]"
+              onclick="redirectToPage()"
             >
               Button Title
             </button>
@@ -581,6 +587,11 @@
             })
             .catch((error) => console.error("Error:", error)); // Log any errors
         });
+
+        function redirectToPage() {
+            window.location.href = './blog-details.html'; // Replace with your target HTML file
+        }
+    </script>
     </script>
   </body>
 </html>
