--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div class="flex w-full my-10 justify-center">
       <h2
         id="hygiene-heading"
-        class="px-10 py-10 text-[#acd5ef] mitr-regular font-medium text-[100px] text-center hover:text-[#3A50B3] font-semibold"
+        class="px-10 py-10 text-[#acd5ef] mitr-regular font-medium text-[70px] md:text-[100px] text-center hover:text-[#3A50B3] font-semibold"
       >
         Let’s make hygiene fun and desirable!
       </h2>
@@ -448,16 +448,19 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col w-full shadow-md rounded-md p-10">
+      <div class="flex flex-col w-full shadow-md rounded-md md:p-10 p-2">
         <form class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post">
             <div class="flex justify-between w-full gap-x-6">
                 <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
                 <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
             </div>
-            <div class="flex justify-between w-full gap-x-6">
+            <div class="flex justify-between w-full gap-x-6 relative">
                 <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
+                <button type="button" class="flex justify-center absolute md:w-20  w-14 p-2 text-white text-xs md:text-base urbanist-regular font-semibold bg-[#3A50B3] hover:bg-blue-700 rounded-md 
+                right-[200px] top-2 lg:right-[350px]">Verify</button> 
                 <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" maxlength="10"  />
             </div>
+            <input type="number" id="otp" placeholder="Enter OTP" name="otp" class="form hidden" minlength="6" maxlength="6" required />
             <input type="text" id="company" placeholder="Company Name" name="cname" class="form" required minlength="2" />
             <textarea id="message" placeholder="Message" name="msg" class="form" required minlength="10"  oninput="removeLinks(this)"></textarea>
             <div class="g-recaptcha" data-sitekey="6LeK3DAqAAAAABPUmnvuJCf7ZUQwRq27KDavibFx"></div>
@@ -516,6 +519,49 @@
       </div>
     </div>
   </section>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const verifyButton = document.querySelector('#contactForm button[type="submit"]');
+        const emailInput = document.querySelector('#bemail');
+        const otp = document.getElementById('otp');
+
+        // Disable form submission for the verify button
+        verifyButton.addEventListener('click', function (e) {
+            e.preventDefault();
+            
+            const email = emailInput.value;
+            if (email) {
+                sendOtp(email);
+            } else {
+                alert("Please enter a valid email address to verify.");
+            }
+        });
+
+        // Function to send OTP to the email
+        function sendOtp(email) {
+            fetch('./inc/send_otp.php', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ email: email }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                   otp.value = data.otp;
+                   otp.classList.remove('hidden');
+                    alert('OTP has been sent to your email.');
+                } else {
+                    alert('Failed to send OTP. Please try again.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        }
+    });
+</script>
   <!-- Welcome Banner Video Logic -->
   <script>
   document.addEventListener('DOMContentLoaded', function () {
