--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             </div>
             <div class="flex justify-between w-full gap-x-6 relative">
                 <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
-                <button type="button" class="flex justify-center absolute md:w-20  w-14 p-2 text-white text-xs md:text-base urbanist-regular font-semibold bg-[#3A50B3] hover:bg-blue-700 rounded-md 
+                <button type="submit" class="flex justify-center absolute md:w-20  w-14 p-2 text-white text-xs md:text-base urbanist-regular font-semibold bg-[#3A50B3] hover:bg-blue-700 rounded-md 
                 right-[200px] top-2 lg:right-[350px]">Verify</button> 
                 <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" maxlength="10"  />
             </div>
