--- a/who-we-are.html
+++ b/who-we-are.html
@@ -402,26 +402,12 @@
                 minlength="2"
               />
             </div>
-            <div class="flex justify-between w-full gap-x-6">
-              <input
-                type="email"
-                id="bemail"
-                placeholder="Business Email"
-                name="bemail"
-                class="form"
-                required
-              />
-              <input
-                type="tel"
-                id="pnum"
-                placeholder="Phone Number"
-                name="pnum"
-                class="form"
-                required
-                pattern="^[0-9]{10}$"
-                maxlength="10"
-              />
-            </div>
+            <div class="flex justify-between w-full gap-x-6 relative">
+              <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
+              <button type="submit" class="flex justify-center absolute md:w-20  w-14 p-2 text-white text-xs md:text-base urbanist-regular font-semibold bg-[#3A50B3] hover:bg-blue-700 rounded-md 
+              right-[200px] top-2 lg:right-[350px]">Verify</button> 
+              <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" maxlength="10"  />
+          </div>
             <input
               type="text"
               id="company"
@@ -597,6 +583,49 @@
         }
       }
     </script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          const verifyButton = document.querySelector('#contactForm button[type="submit"]');
+          const emailInput = document.querySelector('#bemail');
+          const otp = document.getElementById('otp');
+  
+          // Disable form submission for the verify button
+          verifyButton.addEventListener('click', function (e) {
+              e.preventDefault();
+              
+              const email = emailInput.value;
+              if (email) {
+                  sendOtp(email);
+              } else {
+                  alert("Please enter a valid email address to verify.");
+              }
+          });
+  
+          // Function to send OTP to the email
+          function sendOtp(email) {
+              fetch('./inc/send_otp.php', {
+                  method: 'POST',
+                  headers: {
+                      'Content-Type': 'application/json',
+                  },
+                  body: JSON.stringify({ email: email }),
+              })
+              .then(response => response.json())
+              .then(data => {
+                  if (data.success) {
+                     otp.value = data.otp;
+                     otp.classList.remove('hidden');
+                      alert('OTP has been sent to your email.');
+                  } else {
+                      alert('Failed to send OTP. Please try again.');
+                  }
+              })
+              .catch(error => {
+                  console.error('Error:', error);
+              });
+          }
+      });
+  </script>
     <script>
       document
         .getElementById("contactForm")
