--- a/blog-details.html
+++ b/blog-details.html
@@ -266,17 +266,17 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="image-contain-1 md:image-contain">
-              <img src="./public/blog-slider.png" class="" alt="" />
+              <img src="./public/post-1.png" class="shadow-none" alt="" />
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image-contain-1 md:image-contain">
-              <img src="./public/blog-slider-1.png" class="" alt="" />
+              <img src="./public/post-2.png" class="" alt="" />
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image-contain-1 md:image-contain">
-              <img src="./public/blog-slider-2.png" class="" alt="" />
+              <img src="./public/post-3.png" class="" alt="" />
             </div>
           </div>
         </div>
@@ -350,7 +350,7 @@
     <script>
       var swiper = new Swiper(".swiper-contain", {
         loop: true,
-        slidesPerView: 1.25, // Default setting for larger screens
+        slidesPerView: 1, // Default setting for larger screens
         autoplay: {
           delay: 3000, // 3 seconds delay between slides
           disableOnInteraction: false, // Autoplay won't stop after user interaction
