--- a/blog-details.html
+++ b/blog-details.html
@@ -209,56 +209,62 @@
       </div>
     </section>
     <section class="flex w-full h-full">
-      <img src="./public/blog-details.png" class="w-full md:h-[462px] object-cover h-[235px]" alt="" />
+      <img
+        src="./public/blog-details.png"
+        class="w-full md:h-[462px] object-cover h-[235px]"
+        alt=""
+      />
     </section>
     <section class="flex w-full py-16">
-      <div class="flex md:flex-row flex-col gap-x-16 md:px-40 px-4">
-        <div class="flex flex-col w-fit">
-          <h1 class="md:text-[78px] text-[40px]">Wicked Wipes</h1>
-          <div class="flex flex-col">
-            <h2 class="py-6 md:text-[28px] text-[18px]">Wicked Wipes</h2>
-            <p class="md:text-[20px] text-[11px]">
-              gravida fringilla est. gravida diam efficitur. quis urna.
-              hendrerit Lorem turpis non. tincidunt nisi tincidunt scelerisque
-              porta faucibus volutpat placerat.
-            </p>
-          </div>
-          <div class="flex pt-5 w-full">
-            <img src="./public/detail-1.png" class="md:h-[400px] object-cover h-[319px]" alt="" />
-          </div>
-        </div>
-        <div class="flex flex-col pt-12 md:pt-0 font-semibold gap-y-6 md:text-xl text-[12px]">
-          <p>
+      <div
+        class="flex flex-col justify-center  gap-x-16 md:px-40 px-4"
+      >
+        <h1 class="md:text-[78px] text-[40px]">Wicked Wipes</h1>
+        <div class="flex flex-col justify-center">
+          <h2 class="py-6 md:text-[28px] text-[18px]">Wicked Wipes</h2>
+          <p class="md:text-[20px] text-[11px]">
             gravida fringilla est. gravida diam efficitur. quis urna. hendrerit
             Lorem turpis non. tincidunt nisi tincidunt scelerisque porta
             faucibus volutpat placerat.
           </p>
-          <p>
-            Nunc odio nisi gravida leo. nisl. eu facilisis orci ultrices laoreet
-            eget elit massa laoreet at efficitur. elementum libero, quis Ut odio
-            quis tempor non. Sed
-          </p>
-          <p>
-            id Vestibulum dolor volutpat Ut Vestibulum nec lobortis, quam non
-            Donec quis placerat. id orci Vestibulum ex faucibus laoreet elit
-            nisl. scelerisque ex Donec
-          </p>
-          <p>
-            In volutpat viverra sit amet, Nunc ullamcorper Praesent Morbi elit
-            leo. vitae Nunc commodo at, quam elit. nibh venenatis sollicitudin.
-            non sit luctus nisl. In
-          </p>
-          <p>
-            vitae urna tempor felis, tincidunt sollicitudin. venenatis id in ac
-            odio venenatis Donec sollicitudin. non libero, amet, Cras felis,
-            tincidunt odio vitae Nunc
-          </p>
-          <p>
-            sollicitudin. vitae ipsum ex. amet, enim. elementum volutpat ex.
-            maximus In varius Ut placerat. orci eget tincidunt viverra urna.
-            scelerisque porta Donec Nunc
-          </p>
         </div>
+        <div class="flex py-5 w-full justify-center">
+          <img
+            src="./public/detail-1.png"
+            class="md:h-[400px] object-cover h-[319px]"
+            alt=""
+          />
+        </div>
+        <p>
+          gravida fringilla est. gravida diam efficitur. quis urna. hendrerit
+          Lorem turpis non. tincidunt nisi tincidunt scelerisque porta faucibus
+          volutpat placerat.
+        </p>
+        <p>
+          Nunc odio nisi gravida leo. nisl. eu facilisis orci ultrices laoreet
+          eget elit massa laoreet at efficitur. elementum libero, quis Ut odio
+          quis tempor non. Sed
+        </p>
+        <p>
+          id Vestibulum dolor volutpat Ut Vestibulum nec lobortis, quam non
+          Donec quis placerat. id orci Vestibulum ex faucibus laoreet elit nisl.
+          scelerisque ex Donec
+        </p>
+        <p>
+          In volutpat viverra sit amet, Nunc ullamcorper Praesent Morbi elit
+          leo. vitae Nunc commodo at, quam elit. nibh venenatis sollicitudin.
+          non sit luctus nisl. In
+        </p>
+        <p>
+          vitae urna tempor felis, tincidunt sollicitudin. venenatis id in ac
+          odio venenatis Donec sollicitudin. non libero, amet, Cras felis,
+          tincidunt odio vitae Nunc
+        </p>
+        <p>
+          sollicitudin. vitae ipsum ex. amet, enim. elementum volutpat ex.
+          maximus In varius Ut placerat. orci eget tincidunt viverra urna.
+          scelerisque porta Donec Nunc
+        </p>
       </div>
     </section>
     <section class="md:py-24 py-10">
