Fixed the contact form validation Message

--- a/index.html
+++ b/index.html
@@ -535,7 +535,10 @@
             if (email) {
                 sendOtp(email);
             } else {
-                alert("Please enter a valid email address to verify.");
+              const messageContainer1 = document.getElementById('otp-message');
+                      messageContainer1.classList.remove('hidden');
+                      messageContainer1.textContent = 'Failed to send OTP. Please try again.';
+                      messageContainer1.style.color ='red';
             }
         });
 
@@ -580,7 +583,6 @@
             if (!isEmailVerified) {
                 e.preventDefault(); // Prevent form submission
                 const messageContainer1 = document.getElementById('otp-message');
-                alert("Please verify your email before submitting.");
                 messageContainer1.classList.remove('hidden');
                 messageContainer1.textContent = 'Please verify your email before submitting.';
                 messageContainer1.style.color ='red';
