updated validations on  contact forms and added new support and contact emails and updated font style on blog details page

--- a/blog-details.html
+++ b/blog-details.html
@@ -222,7 +222,7 @@
         <h1 class="md:text-[78px] text-[40px]">Wicked Wipes</h1>
         <div class="flex flex-col justify-center">
           <h2 class="py-6 md:text-[28px] text-[18px]">Wicked Wipes</h2>
-          <p class="md:text-[20px] text-[11px]">
+          <p class="md:text-[20px] text-[11px] league-spartan">
             gravida fringilla est. gravida diam efficitur. quis urna. hendrerit
             Lorem turpis non. tincidunt nisi tincidunt scelerisque porta
             faucibus volutpat placerat.
@@ -235,32 +235,32 @@
             alt=""
           />
         </div>
-        <p>
+        <p class="league-spartan">
           gravida fringilla est. gravida diam efficitur. quis urna. hendrerit
           Lorem turpis non. tincidunt nisi tincidunt scelerisque porta faucibus
           volutpat placerat.
         </p>
-        <p>
+        <p class="league-spartan">
           Nunc odio nisi gravida leo. nisl. eu facilisis orci ultrices laoreet
           eget elit massa laoreet at efficitur. elementum libero, quis Ut odio
           quis tempor non. Sed
         </p>
-        <p>
+        <p class="league-spartan">
           id Vestibulum dolor volutpat Ut Vestibulum nec lobortis, quam non
           Donec quis placerat. id orci Vestibulum ex faucibus laoreet elit nisl.
           scelerisque ex Donec
         </p>
-        <p>
+        <p class="league-spartan">
           In volutpat viverra sit amet, Nunc ullamcorper Praesent Morbi elit
           leo. vitae Nunc commodo at, quam elit. nibh venenatis sollicitudin.
           non sit luctus nisl. In
         </p>
-        <p>
+        <p class="league-spartan">
           vitae urna tempor felis, tincidunt sollicitudin. venenatis id in ac
           odio venenatis Donec sollicitudin. non libero, amet, Cras felis,
           tincidunt odio vitae Nunc
         </p>
-        <p>
+        <p class="league-spartan">
           sollicitudin. vitae ipsum ex. amet, enim. elementum volutpat ex.
           maximus In varius Ut placerat. orci eget tincidunt viverra urna.
           scelerisque porta Donec Nunc
