--- a/blog-details.html
+++ b/blog-details.html
@@ -27,7 +27,7 @@
       content="/public/meta/wicked-wipes-features.jpg"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
