--- a/private-label.html
+++ b/private-label.html
@@ -48,7 +48,7 @@
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./.css" />
     <link rel="stylesheet" href="./index.css" />
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
