--- a/blog-details.html
+++ b/blog-details.html
@@ -27,7 +27,6 @@
       content="/public/meta/wicked-wipes-features.jpg"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -216,9 +215,7 @@
       />
     </section>
     <section class="flex w-full py-16">
-      <div
-        class="flex flex-col justify-center  gap-x-16 md:px-40 px-4"
-      >
+      <div class="flex flex-col justify-center gap-x-16 md:px-40 px-4">
         <h1 class="md:text-[78px] text-[40px]">Wicked Wipes</h1>
         <div class="flex flex-col justify-center">
           <h2 class="py-6 md:text-[28px] text-[18px]">Wicked Wipes</h2>
