--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     
     })(window,document,'script','dataLayer','GTM-PNF89GR5');</script>
   <!-- Google tag (gtag.js) -->
-
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -33,7 +32,6 @@
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <link rel="stylesheet" href="./.css" />
   <link rel="stylesheet" href="./index.css" />
   <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1066,6 +1064,6 @@ setInterval(changeImage, 3000);
       },
     });
   </script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
+  <script async defer src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"></script>
 </body>
 </html>
