--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
         </h1>
       </div>
       <div class="flex w-full items-end md:overflow-hidden" id="image-container">
-        <img src="./public/elip.svg" class="absolute h-[370px] md:h-[500px] bottom-0 right-0 " alt="" id="image-3">
-        <img id="image-1" src="./public/menta 2.svg" class="absolute size-[200px] md:size-[470px] bottom-56 right-[-10px] md:top-0 md:right-0" alt="" loading="lazy">
-        <img id="image-2" src="./public/menta 1.svg" class="absolute size-[200px] md:size-[470px] bottom-[-20px] z-[100] right-56 md:bottom-[-30px] md:right-[450px]"
+        <img src="./public/elip.png" class="absolute h-[370px] md:h-[500px] bottom-0 right-0 " alt="" id="image-3">
+        <img id="image-1" src="./public/menta 2.png" class="absolute size-[200px] md:size-[470px] bottom-56 right-[-10px] md:top-0 md:right-0" alt="" loading="lazy">
+        <img id="image-2" src="./public/menta 1.png" class="absolute size-[200px] md:size-[470px] bottom-[-20px] z-[100] right-56 md:bottom-[-30px] md:right-[450px]"
         alt="" loading="lazy">
         <img src="./public/pods.png" class="absolute size-[400px] md:size-[800px] right-[-180px] md:-right-[350px] bottom-[-230px] md:-bottom-[460px] duration-500 z-50"  alt="" id="myDiv" loading="lazy">
         <div class="bg-[#c1eaf3] rounded-full size-[350px] md:size-[300px] z-40 absolute -right-[120px] -bottom-[120px] md:overflow-hidden" id="elip1"></div>
@@ -996,19 +996,19 @@ document.addEventListener('DOMContentLoaded', function () {
   const imageElement2 = document.getElementById('image-3');
 
   const imageArray = [
-  './public/menta 2.svg',
+  './public/menta 2.png',
   './public/lemon.png',
   './public/leaf1.png',
   './public/water1.png'
 ];
   const imageArray1 = [
-  './public/menta 1.svg',
+  './public/menta 1.png',
   './public/lemon1.png',
   './public/leaf2.png',
   './public/water2.png'
 ];
   const imageArray2 = [
-  './public/elip.svg',
+  './public/elip.png',
   './public/yellow-ellip.png',
   './public/green-ellip.png',
   './public/ice-ellip.png'
