--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
           <img src="./public/pods1.png" class="absolute size-auto" alt="">
         </div>
         <div class="hidden w-full flex h-full z-[100] pt-28 object-contain relative" id="grid">
-          <img src="./public/green 5.svg" alt="" class="size-auto absolute top-20 left-20">
-          <img src="./public/green 6.svg" alt="" class="size-auto absolute top-0 right-2">
-          <img src="./public/white 3.svg" alt="" class="size-auto absolute top-40 right-10">
-          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute top-48 right-56">
+          <img src="./public/green 5.svg" alt="" class="size-auto absolute top-20 left-20" loading="lazy">
+          <img src="./public/green 6.svg" alt="" class="size-auto absolute top-0 right-2" loading="lazy">
+          <img src="./public/white 3.svg" alt="" class="size-auto absolute top-40 right-10" loading="lazy">
+          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute top-48 right-56" loading="lazy">
         </div>
         <div class="flex flex-col w-full text-white z-[200]"id="topic">
           <h1 class="text-[30px] concert-one-regular w-full" id="topic">Hygienic, Safe, Natural,
@@ -191,10 +191,10 @@
           <img src="./public/pods1.png" class="" alt="">
         </div>
         <div class="hidden w-full flex h-full" id="grid-1">
-          <img src="./public/green 5.svg" alt="" class="size-auto absolute bottom-32 right-56">
-          <img src="./public/green 6.svg" alt="" class="size-auto absolute bottom-32 right-10">
-          <img src="./public/white 3.svg" alt="" class="size-auto absolute bottom-10 right-10">
-          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-10 right-56">
+          <img src="./public/green 5.svg" alt="" class="size-auto absolute bottom-32 right-56" loading="lazy">
+          <img src="./public/green 6.svg" alt="" class="size-auto absolute bottom-32 right-10" loading="lazy">
+          <img src="./public/white 3.svg" alt="" class="size-auto absolute bottom-10 right-10" loading="lazy">
+          <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-10 right-56" loading="lazy">
         </div>
       </div>
       <video id="videoPlayer" class="object-cover w-full md:h-full h-[900px]" loop muted playsinline>
